--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,7 @@
     }
   },
   // "onCreateCommand": "sudo apt-get update; sudo apt-get install -y chromium",
-  "onCreateCommand": "docker import /tmp/ceos-lab-temp ceos-lab:latest; rm -rf /tmp/",
+  "onCreateCommand": "docker import /home/vscode/tmp/ceos-lab-temp ceos-lab:latest",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2.2.0": {
       "version": "latest"
