--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,8 +2,10 @@ FROM ghcr.io/aristanetworks/avd/universal:python3.11-avd-devel
 
 ARG _ARTOKEN
 ARG _AR_FILE_PATH
+ARG _CLAB_VERSION
 
-USER vscode
+
+USER avd
 
 RUN bash -c "$(curl -sL https://get.containerlab.dev)" -- -v ${_CLAB_VERSION} \
     && pip3 install --user yamllint
@@ -14,7 +16,7 @@ RUN if [ ! -z ${_ARTOKEN} ]; \
     && ARSESSION=$(curl -X "POST" "https://www.arista.com/custom_data/api/cvp/getSessionCode/" -H 'Content-Type: application/json'   -d "{\"accessToken\": \"$ARTOKEN\"}" | sed -n 's|.*"session_code":"\([^"]*\)".*|\1|p') \
     && FILE_PATH=${_AR_FILE_PATH} \
     && DOWNLOAD_URL=$(curl -X "POST" "https://www.arista.com/custom_data/api/cvp/getDownloadLink/" -H 'Content-Type: application/json' -d "{\"sessionCode\": \"$ARSESSION\", \"filePath\": \"$FILE_PATH\"}" | sed -n 's|.*"url":"\([^"]*\)".*|\1|p') \
-    && mkdir -p /home/vscode/tmp \
-    && curl "$DOWNLOAD_URL" --output /home/vscode/tmp/ceos-lab-temp \
+    && mkdir -p /home/avd/tmp \
+    && curl "$DOWNLOAD_URL" --output /home/avd/tmp/ceos-lab-temp \
     ;fi
 
