--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,15 +7,12 @@
     "args": {
       "_AVD_VERSION": "4.1.0",
       "_CLAB_VERSION": "0.37.1",
-      "_RELEASE_DATE": "19.07.2023",
-      "_YQ_VERSION": "v4.34.1",
-      "_YQ_BINARY": "yq_linux_amd64",
       "_AR_FILE_PATH": "/support/download/EOS-USA/Active Releases/4.29/EOS-4.29.3M/cEOS-lab/cEOS-lab-4.29.3M.tar.xz",
       "_ARTOKEN": "${localEnv:ARTOKEN}"
     }
   },
   // "onCreateCommand": "sudo apt-get update; sudo apt-get install -y chromium",
-  "onCreateCommand": "docker import /home/avd/tmp/ceos-lab-temp ceos-lab:latest",
+  //"onCreateCommand": "docker import /home/avd/tmp/ceos-lab-temp ceos-lab:latest",
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2.2.0": {
       "version": "latest"
