--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,7 +12,7 @@
     }
   },
   // "onCreateCommand": "sudo apt-get update; sudo apt-get install -y chromium",
-  //"onCreateCommand": ["sudo usermod -aG docker avd"],
+  "onCreateCommand": ["sudo docker import /home/avd/tmp/ceos-lab-tmp"],
   "features": {
     "ghcr.io/devcontainers/features/docker-in-docker:2.2.0": {
       "version": "latest"
