--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -18,5 +18,6 @@ RUN if [ ! -z ${_ARTOKEN} ]; \
     && DOWNLOAD_URL=$(curl -X "POST" "https://www.arista.com/custom_data/api/cvp/getDownloadLink/" -H 'Content-Type: application/json' -d "{\"sessionCode\": \"$ARSESSION\", \"filePath\": \"$FILE_PATH\"}" | sed -n 's|.*"url":"\([^"]*\)".*|\1|p') \
     && mkdir -p /home/avd/tmp \
     && curl "$DOWNLOAD_URL" --output /home/avd/tmp/ceos-lab-temp \
+    && docker import /home/avd/tmp/ceos-lab-temp ceos-lab
     ;fi
 
