--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,10 +5,7 @@ ARG _AR_FILE_PATH
 ARG _CLAB_VERSION
 
 
-USER avd
-
-RUN bash -c "$(curl -sL https://get.containerlab.dev)" -- -v ${_CLAB_VERSION} \
-    && pip3 install --user yamllint
+RUN bash -c "$(curl -sL https://get.containerlab.dev)" -- -v ${_CLAB_VERSION}
 
 RUN if [ ! -z ${_ARTOKEN} ]; \
     then \
@@ -17,7 +14,6 @@ RUN if [ ! -z ${_ARTOKEN} ]; \
     && FILE_PATH=${_AR_FILE_PATH} \
     && DOWNLOAD_URL=$(curl -X "POST" "https://www.arista.com/custom_data/api/cvp/getDownloadLink/" -H 'Content-Type: application/json' -d "{\"sessionCode\": \"$ARSESSION\", \"filePath\": \"$FILE_PATH\"}" | sed -n 's|.*"url":"\([^"]*\)".*|\1|p') \
     && mkdir -p /home/avd/tmp \
-    && curl "$DOWNLOAD_URL" --output /home/avd/tmp/ceos-lab-temp \
-    && docker import /home/avd/tmp/ceos-lab-temp ceos-lab
+    && curl "$DOWNLOAD_URL" --output /home/avd/tmp/ceos-lab-tmp \
     ;fi
 
