--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,51 +1,30 @@
 // For format details, see https://aka.ms/devcontainer.json. For config options, see the
 // README at: https://github.com/devcontainers/templates/tree/main/src/python
 {
-  "name": "avd_extended_workshop",
+  "name": "avd_clab",
   "build": {
     "dockerfile": "Dockerfile",
     "args": {
-      "_AVD_VERSION": "4.1.0",
-      "_CLAB_VERSION": "0.37.1",
-      "_AR_FILE_PATH": "/support/download/EOS-USA/Active Releases/4.29/EOS-4.29.3M/cEOS-lab/cEOS-lab-4.29.3M.tar.xz",
+      "_CLAB_VERSION": "0.50.0",
+      "_AR_FILE_PATH": "/support/download/EOS-USA/Active Releases/4.30/EOS-4.30.3M/cEOS-lab/cEOS-lab-4.30.3M.tar.xz",
       "_ARTOKEN": "${localEnv:ARTOKEN}"
     }
   },
   // "onCreateCommand": "sudo apt-get update; sudo apt-get install -y chromium",
-  //"onCreateCommand": ["sudo docker import /home/avd/tmp/ceos-lab-tmp ceos-lab"],
-  "features": {
-    "ghcr.io/devcontainers/features/docker-in-docker:2.2.0": {
-      "version": "latest"
-    },
-    // add sshd to support gh cli codespace cp
-    "ghcr.io/devcontainers/features/sshd:1": {
-      "version": "latest"
-    }
-  },
+  "onCreateCommand": "docker import /home/avd/tmp/ceos-lab-tmp ceos-lab:latest",
+  //"features": {
+  //  "ghcr.io/devcontainers/features/docker-in-docker:2.2.0": {
+  //    "version": "latest"
+  //  },
+  //  // add sshd to support gh cli codespace cp
+  //  "ghcr.io/devcontainers/features/sshd:1": {
+  //    "version": "latest"
+  //  }
+  //},
   // set minimum host requirements for cLab
   "hostRequirements": {
     "cpus": 4,
     "memory": "8gb",
     "storage": "32gb"
-  },
-  "customizations": {
-    "vscode": {
-      "extensions": [
-        // install Marp extension for VScode to build slides
-        // "marp-team.marp-vscode",
-        // git essentials
-        "piotrpalarz.vscode-gitignore-generator",
-        "mhutchie.git-graph",
-        "eamodio.gitlens",
-        "donjayamanne.githistory",
-        // spell checker
-        "streetsidesoftware.code-spell-checker",
-        // errors and highlighters
-        "mechatroner.rainbow-csv",
-        // markdown
-        "yzhang.markdown-all-in-one",
-        "bierner.markdown-checkbox"
-      ]
-    }
   }
 }
